--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -9,8 +9,10 @@
 <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
         tex2jax: {
-        skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
-        inlineMath: [['$','$']]
+            skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
+            inlineMath: [['$','$']],
+            ddisplayMath: [['\\[','\\]']],
+            processEscapes: true
         }
     });
 </script>
